#
# LibHideIP - A library for hiding local IP address.
#	-- Makefile.am, part of the build system.
#
# Copyright (C) 2008-2024 Bogdan Drozdowski, bogdro (at) users . sourceforge . net
# License: GNU General Public License, v3+
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

info_TEXINFOS = libhideip.texi
libhideip_TEXINFOS = libhideip.texi
man_MANS = libhideip.3
EXTRA_DIST = $(man_MANS) libhideip.texi.in libhideip.info
AM_MAKEINFOHTMLFLAGS = --css-ref=../sf_bogdro.css
